# Word-Puzzle-Battle

./: .firebaserc  .gitignore  LICENSE.md  README.md  capacitor.config.json  config.example.js  firebase.json  index.html  style.css
.github/workflows/: android.yml  deploy.yml  desktop.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: .gitignore  ai-bot.js  auth.css  auth.js  avatar-picker.js  config.js  dictionary.json  firebase-multiplayer.js  game.js  index.html  manifest.json  multiplayer.css  package-lock.json  package.json  privacy.html  profile.js  service-worker.js  speed-insights.js  style.css  terms.html  trie.js  tutorial.css  tutorial.js
